--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,13 +1,27 @@
 <h1>Editing Book</h1>
-<%= form_with model: @book do |f| %>
-  <h4>Title</h4>
-  <%= f.text_field :title %>
-
-  <h4>Body</h4>
-  <%= f.text_area :body %>
-
-  <div><%= f.submit 'Update Book' %></div>
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>error prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
 <% end %>
 
-<a class="show" href="/books/:id/show">Show</a>
-<a class="back" href="/books">Back</a>
+<%= form_with model: @book do |f| %>
+
+<div class="field">
+  <label for="book_title">Title</label>
+  <div><%= f.text_field :title %></div>
+</div>
+
+<div class="field">
+  <label for="book_body">Body</label>
+  <div><%= f.text_area :body %></div>
+</div>
+
+<div class="field"><%= f.submit 'Update Book' %></div>
+<% end %>
+
+<%= link_to 'Show', book_path(@book.id) %> |
+<%= link_to 'Back', "/books" %>
