--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,9 @@
 <!-- 投稿一覧表示 -->
+<html>
 <body>
+<p>
+  <%= flash[:notice] %>
+</p>
 <h1>Books</h1>
 <table>
   <thead>
@@ -15,7 +19,7 @@
       <tr>
         <td><%= book.title %></td>
         <td><%= book.body %></td>
-        <td><%= link_to 'Show', book_path(book.id) %></td>
+        <td><%= link_to 'Show', book_path(book.id)  %></td>
         <td><%= link_to 'Edit', edit_book_path(book.id) %></td>
         <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
@@ -25,14 +29,27 @@
 
 <!-- 新規登録機能 -->
 <h2>New book</h2>
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>error prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 
 <%= form_with model: @book do |f| %>
-  <h4>Title</h4>
-  <%= f.text_field :title %>
-
-  <h4>Body</h4>
-  <%= f.text_area :body %>
-
+  <div class="field">
+    <label for="book_title">Title</label>
+    <div><%= f.text_field :title %></div>
+  </div>
+  
+  <div class="field">
+    <label for="book_body">Body</label>
+    <div><%= f.text_area :body %></div>
+  </div>
+  
   <%= f.submit 'Create Book' %>
 <% end %>
 </body>
+</html>
